# augmented-citizen-sdk

./: Cargo.toml  LICENSE  `README.md
docs/architecture/: overview.md
src/: lib.rs
src/ai_chat/: mod.rs
src/auth/: mod.rs
src/capabilities/: mod.rs
src/ndm/: mod.rs
src/offline/: mod.rs
src/session/: mod.rs
tests/: integration_tests.rs
