[package]
name = "augmented-citizen-sdk"
version = "1.0.0"
edition = "2021"
authors = ["ALN Sovereign Stack Contributors"]
description = "SDK for Augmented-Citizen applications with built-in sovereignty"
license = "ASL-1.0"
repository = "https://github.com/aln-sovereign/augmented-citizen-sdk"
documentation = "https://docs.rs/augmented-citizen-sdk"
keywords = ["aln", "sdk", "citizen", "did", "sovereignty"]
categories = ["api-bindings", "authentication", "cryptography"]

[dependencies]
aln-syntax-core = { version = "1.0", path = "../aln-syntax-core" }
sovereigntycore = { version = "1.0", path = "../sovereigntycore" }
zes-crypto-lib = { version = "1.0", path = "../zes-crypto-lib" }
row-rpm-ledger = { version = "1.0", path = "../row-rpm-ledger" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
android-activity = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
serial_test = "2.0"
tokio-test = "0.4"

[lib]
name = "augmented_citizen_sdk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "citizen-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "sdk_performance"
harness = false

[features]
default = ["std", "full-sovereignty"]
std = []
full-sovereignty = ["tokio", "reqwest"]
wasm = ["wasm-bindgen", "js-sys"]
android = ["android-activity"]
offline-mode = []
ai-chat = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "citizen_app"
path = "examples/citizen_app.rs"

[lints.clippy]
all = "deny"
pedantic = "warn"
unsafe_code = "deny"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
